--- a/main/assets/bundles/bundle_zh_CN.properties
+++ b/main/assets/bundles/bundle_zh_CN.properties
@@ -5,6 +5,18 @@ whitespacebetween=false
 cell=\u6DB2\u4F53\u5355\u5143
 item.disintegration-iron.name=\u94C1
 item.disintegration-iron.description=\u7528\u4E8E\u57FA\u7840\u5EFA\u7B51\u5236\u9020\u3002
+item.disintegration-nickel.name=\u954D
+item.disintegration-nickel.description=\u7528\u4E8E\u57FA\u7840\u5EFA\u7B51\u5236\u9020\u3002
+item.disintegration-lithium.name=\u9502
+item.disintegration-lithium.description=\u7528\u4F5C\u71C3\u6599\u548C\u7535\u6C60\u751F\u4EA7\u3002
+item.disintegration-obsidian.name=\u9ED1\u66DC\u77F3
+item.disintegration-obsidian.description=
+item.disintegration-tantalum-tungsten-alloy.name=\u94BD\u94A8\u5408\u91D1
+item.disintegration-tantalum-tungsten-alloy.description=
+item.disintegration-tantalum.name=\u94BD
+item.disintegration-tantalum.description=
+item.disintegration-silicon-crystal.name=\u7845\u6676\u4F53
+item.disintegration-silicon-crystal.description=
 item.disintegration-steel.name=\u94A2
 item.disintegration-steel.description=\u7528\u4E8E\u8010\u7528\u5EFA\u7B51\u3002
 item.disintegration-silver.name=\u94F6
@@ -82,6 +94,8 @@ block.disintegration-iron-router.name=\u94C1\u8DEF\u7531\u5668
 block.disintegration-iron-router.description=\u5C06\u7269\u54C1\u5E73\u5747\u5206\u914D\u5230\u5176\u4ED6\u4E09\u4E2A\u65B9\u5411\u3002
 block.disintegration-iridium-conveyor.name=\u94F1\u4F20\u9001\u5E26
 block.disintegration-iridium-conveyor.description=\u5411\u524D\u8FD0\u8F93\u7269\u54C1\uFF0C\u6BD4\u94C1\u4F20\u9001\u5E26\u5FEB\u3002
+block.disintegration-portable-drill-unloader.name=\u53EF\u79FB\u52A8\u5F0F\u94BB\u5934\u5378\u8F7D\u5668
+block.disintegration-portable-drill-unloader.description=
 block.disintegration-heat-conduit.name=\u70ED\u91CF\u5BFC\u7BA1
 block.disintegration-heat-conduit.description=\u4F20\u8F93\u70ED\u91CF\u3002 \u4E0E\u53D1\u70ED\u5668\u548C\u5176\u4ED6\u70ED\u91CF\u5BFC\u7BA1\u8054\u5408\u4F7F\u7528\u3002
 block.disintegration-heat-conduit-router.name=\u70ED\u91CF\u5BFC\u7BA1\u8DEF\u7531\u5668
@@ -100,18 +114,28 @@ block.disintegration-power-capacitor.name=\u7535\u5BB9
 block.disintegration-power-capacitor.description=\u50A8\u5B58\u7535\u7F51\u591A\u4F59\u7535\u529B\uFF0C\u5E76\u5728\u7535\u7F51\u4F9B\u7535\u4E0D\u8DB3\u65F6\u653E\u7535\u3002
 block.disintegration-arc-reactor.name=\u7535\u5F27\u53CD\u5E94\u5806
 block.disintegration-arc-reactor.description=\u5229\u7528\u5DE8\u6D6A\u5408\u91D1\u7684\u653E\u7535\u6027\u4E0E\u7535\u78C1\u5408\u91D1\u7684\u78C1\u6027\u53D1\u7535\u3002
+block.disintegration-power-driver.name=\u7535\u529B\u9A71\u52A8\u5668
+block.disintegration-power-driver.description=
+block.disintegration-tokamak-fusion-reactor.name=\u6258\u5361\u9A6C\u514B\u805A\u53D8\u53CD\u5E94\u5806
+block.disintegration-tokamak-fusion-reactor.description=
 block.disintegration-neoplasm-generator.name=\u80BF\u7624\u53D1\u7535\u673A
 block.disintegration-neoplasm-generator.description=\u7528\u7624\u6DB2\u6765\u53D1\u7535\u3002 \u4F1A\u611F\u67D3\u4E34\u8FD1\u7684\u65B9\u5757\u3002
 block.disintegration-space-solar-panel.name=\u592A\u9633\u80FD\u677F
 block.disintegration-space-solar-panel.description=\u7528\u9633\u5149\u53D1\u7535\u3002
 block.disintegration-rotate-solar-panel.name=\u592A\u9633\u80FD\u677F
 block.disintegration-rotate-solar-panel.description=\u7528\u9633\u5149\u53D1\u7535\u3002
+block.disintegration-solar-mirror.name=\u592A\u9633\u955C
+block.disintegration-solar-mirror.description=
+block.disintegration-solar-boiler.name=\u592A\u9633\u80FD\u84B8\u6C7D\u9505\u7089
+block.disintegration-solar-boiler.description=
 block.disintegration-burning-heater.name=\u71C3\u70E7\u5236\u70ED\u673A
 block.disintegration-burning-heater.description=\u71C3\u70E7\u7164\u70AD\u4E4B\u7C7B\u7684\u53EF\u71C3\u6750\u6599\u4EA7\u751F\u70ED\u91CF\u3002
 block.disintegration-thermal-heater.name=\u5730\u70ED\u5236\u70ED\u673A
 block.disintegration-thermal-heater.description=\u653E\u7F6E\u5728\u70BD\u70ED\u7684\u5730\u5F62\u4E0A\u4EA7\u751F\u70ED\u91CF\u3002
 block.disintegration-unit-fabricator.name=\u5355\u4F4D\u5236\u9020\u5382
 block.disintegration-unit-fabricator.description=\u751F\u4EA7\u5355\u4F4D\u3002 \u4EA7\u51FA\u7684\u5355\u4F4D\u53EF\u4EE5\u76F4\u63A5\u6295\u5165\u6218\u573A\uFF0C\u4E5F\u53EF\u4EE5\u9001\u5165\u91CD\u6784\u5DE5\u5382\u8FDB\u884C\u5347\u7EA7\u3002
+block.disintegration-unit-producer.name=\u5355\u4F4D\u751F\u4EA7\u5382
+block.disintegration-unit-producer.description=\u751F\u4EA7\u5355\u4F4D\u3002 \u4EA7\u51FA\u7684\u5355\u4F4D\u53EF\u4EE5\u76F4\u63A5\u6295\u5165\u6218\u573A\uFF0C\u4E5F\u53EF\u4EE5\u9001\u5165\u91CD\u6784\u5DE5\u5382\u8FDB\u884C\u5347\u7EA7\u3002
 block.disintegration-additive-refabricator.name=\u6570\u589E\u7EA7\u5355\u4F4D\u91CD\u6784\u5DE5\u5382
 block.disintegration-additive-refabricator.description=\u5C06\u8F93\u5165\u7684\u5355\u4F4D\u5347\u7EA7\u5230\u7B2C\u4E8C\u7EA7\u3002
 block.disintegration-multiplicative-refabricator.name=\u500D\u4E58\u7EA7\u5355\u4F4D\u91CD\u6784\u5DE5\u5382
@@ -124,7 +148,9 @@ block.disintegration-pressure-drill.name=\u6C14\u538B\u94BB\u5934
 block.disintegration-pressure-drill.description=\u653E\u7F6E\u5728\u77FF\u7269\u4E0A\u65F6\uFF0C\u4EE5\u7F13\u6162\u7684\u901F\u5EA6\u65E0\u9650\u8F93\u51FA\u7269\u54C1\u3002\n\u53EA\u80FD\u5F00\u91C7\u57FA\u672C\u8D44\u6E90\u3002
 block.disintegration-stiff-drill.name=\u786C\u8D28\u94BB\u5934
 block.disintegration-stiff-drill.description=\u4E00\u79CD\u6539\u8FDB\u7684\u94BB\u5934\uFF0C\u80FD\u5F00\u91C7\u94F6\u3002 \u91C7\u77FF\u901F\u5EA6\u6BD4\u6C14\u538B\u94BB\u5934\u5FEB\u3002
-block.disintegration-portable-drill.name=\u4FBF\u643A\u5F0F\u94BB\u5934
+block.disintegration-cutting-drill.name=\u5207\u524A\u94BB\u5934
+block.disintegration-cutting-drill.description=
+block.disintegration-portable-drill.name=\u53EF\u79FB\u52A8\u5F0F\u94BB\u5934
 block.disintegration-portable-drill.description=\u653E\u7F6E\u5728\u77FF\u7269\u4E0A\u65F6\uFF0C\u4EE5\u7F13\u6162\u7684\u901F\u5EA6\u65E0\u9650\u8F93\u51FA\u7269\u54C1\u3002\u53EF\u4EE5\u79FB\u52A8\u3002\n\u53EA\u80FD\u5F00\u91C7\u57FA\u672C\u8D44\u6E90\u3002
 block.disintegration-algal-pond.name=\u85FB\u6C60
 block.disintegration-algal-pond.description=\u5C06\u6C34\u4E2D\u4F4E\u6D53\u5EA6\u7684\u85FB\u7C7B\u57F9\u517B\u6210\u85FB\u6C34\u4E0E\u6C27\u6C14\u3002
@@ -147,6 +173,12 @@ block.disintegration-light-space.name=\u7A7A\u95F4\u7AD9\u592A\u7A7A
 block.disintegration-space-station-floor.name=\u7A7A\u95F4\u7AD9\u5730\u677F
 block.disintegration-quarry.name=\u91C7\u77F3\u573A
 block.disintegration-quarry.description=\u6316\u6398\u524D\u9762\u4E00\u7247\u533A\u57DF\u7684\u77FF\u7269\u3002
+block.disintegration-sabre.name=\u4F69\u5251
+block.disintegration-sabre.description=\u5411\u654C\u4EBA\u53D1\u5C04\u7A7F\u523A\u5B50\u5F39\u3002
+block.disintegration-franklinism.name=\u9759\u7535
+block.disintegration-franklinism.description=\u5411\u654C\u4EBA\u53D1\u5C04\u7535\u5F27\u3002
+block.disintegration-amperage.name=\u7535\u6D41
+block.disintegration-amperage.description=
 block.disintegration-axe.name=\u6218\u65A7
 block.disintegration-axe.description=\u5411\u654C\u4EBA\u53D1\u5C04\u56DB\u8054\u5236\u5BFC\u5BFC\u5F39\u3002
 block.disintegration-voltage.name=\u7535\u538B
@@ -193,6 +225,10 @@ block.disintegration-aegis.name=\u5E87\u62A4
 block.disintegration-aegis.description=\u53D1\u5C04\u6FC0\u5149\u5F39\u6765\u4F24\u5BB3\u654C\u4EBA\u5E76\u4FEE\u590D\u53CB\u65B9\u5EFA\u7B51\u3002
 block.disintegration-permeation.name=\u6E17\u900F
 block.disintegration-permeation.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u8FD1\u8DDD\u79BB\u7A7F\u900F\u6027\u5B50\u5F39\u3002
+block.disintegration-portable-turret.name=\u53EF\u79FB\u52A8\u5F0F\u70AE\u5854
+block.disintegration-portable-turret.description=
+block.disintegration-wander.name=\u6F2B\u6B65
+block.disintegration-wander.description=
 block.disintegration-iron-wall.name=\u94C1\u5899
 block.disintegration-iron-wall.description=\u4FDD\u62A4\u5DF1\u65B9\u5EFA\u7B51\uFF0C\u6321\u4E0B\u654C\u65B9\u70AE\u5F39\u3002
 block.disintegration-iron-wall-large.name=\u5927\u578B\u94C1\u5899
@@ -215,6 +251,22 @@ block.disintegration-nitride-wall.name=\u6C2E\u5316\u7269\u5899
 block.disintegration-nitride-wall.description=\u4FDD\u62A4\u5DF1\u65B9\u5EFA\u7B51\uFF0C\u6321\u4E0B\u654C\u65B9\u70AE\u5F39\u3002 \u53D7\u653B\u51FB\u65F6\u95F4\u65AD\u91CA\u653E\u6FC0\u5149\u3002
 block.disintegration-nitride-wall-large.name=\u5927\u578B\u6C2E\u5316\u7269\u5899
 block.disintegration-nitride-wall-large.description=\u4FDD\u62A4\u5DF1\u65B9\u5EFA\u7B51\uFF0C\u6321\u4E0B\u654C\u65B9\u70AE\u5F39\u3002 \u53D7\u653B\u51FB\u65F6\u95F4\u65AD\u91CA\u653E\u6FC0\u5149\u3002
+block.disintegration-nickel-wall.name=\u954D\u5899
+block.disintegration-nickel-wall.description=\u4FDD\u62A4\u5DF1\u65B9\u5EFA\u7B51\uFF0C\u6321\u4E0B\u654C\u65B9\u70AE\u5F39\u3002
+block.disintegration-nickel-wall-large.name=\u5927\u578B\u954D\u5899
+block.disintegration-nickel-wall-large.description=\u4FDD\u62A4\u5DF1\u65B9\u5EFA\u7B51\uFF0C\u6321\u4E0B\u654C\u65B9\u70AE\u5F39\u3002
+block.disintegration-laser-defence-tower.name=\u6FC0\u5149\u9632\u5FA1\u5854
+block.disintegration-laser-defence-tower.description=
+block.disintegration-circle-force-projector.name=\u5706\u5F62\u529B\u5899\u6295\u5F71
+block.disintegration-circle-force-projector.description=
+block.disintegration-payload-duct.name=\u8F7D\u8377\u5BFC\u7BA1
+block.disintegration-payload-duct.description=
+block.disintegration-payload-duct-router.name=\u8F7D\u8377\u5BFC\u7BA1\u8DEF\u7531\u5668
+block.disintegration-payload-duct-router.description=
+block.disintegration-payload-duct-junction.name=\u8F7D\u8377\u5BFC\u7BA1\u4EA4\u53C9\u5668
+block.disintegration-payload-duct-junction.description=
+block.disintegration-payload-teleporter.name=\u8F7D\u8377\u4F20\u9001\u5668
+block.disintegration-payload-teleporter.description=
 block.disintegration-payload-constructor.name=\u8F7D\u8377\u6784\u9020\u5668
 block.disintegration-payload-constructor.description=\u5236\u9020\u5C3A\u5BF8\u4E0D\u8D85\u8FC72x2\u65B9\u5757\u7684\u5EFA\u7B51\u3002
 block.disintegration-large-payload-constructor.name=\u5927\u578B\u8F7D\u8377\u6784\u9020\u5668
@@ -348,6 +400,8 @@ unit.disintegration-space-station-drone.name=\u7A7A\u95F4\u7AD9\u65E0\u4EBA\u673
 unit.disintegration-space-station-drone.description=\u4FDD\u62A4\u7A7A\u95F4\u7AD9\uFF0C\u53EF\u5EFA\u9020\u5EFA\u7B51\u3002 \u4F7F\u7528\u6FC0\u5149\u675F\u4FEE\u590D\u5EFA\u7B51\u3002
 unit.disintegration-repair-drone.name=\u4FEE\u590D\u65E0\u4EBA\u673A
 unit.disintegration-refabricating-drone.name=\u91CD\u6784\u65E0\u4EBA\u673A
+unit.disintegration-portable-drill-unit.name=\u53EF\u79FB\u52A8\u5F0F\u94BB\u5934
+unit.disintegration-portable-turret-unit.name=\u53EF\u79FB\u52A8\u5F0F\u70AE\u5854
 status.disintegration-sanded.name=\u6C99\u5B50\u78E8\u635F
 status.disintegration-electric-resonated.name=\u7535\u79BB
 status.corroded.name=\u8150\u8680
