--- a/main/assets/bundles/bundle_zh_CN.properties
+++ b/main/assets/bundles/bundle_zh_CN.properties
@@ -29,7 +29,7 @@ item.disintegration-ionic-alloy.name=\u79BB\u5B50\u5408\u91D1
 item.disintegration-ionic-alloy.description=\u7528\u4E8E\u7535\u529B\u70AE\u5854\u548C\u5B50\u5F39\u3002
 item.disintegration-conduction-alloy.name=\u4F20\u5BFC\u5408\u91D1
 item.disintegration-conduction-alloy.description=\u7528\u4E8E\u9AD8\u7EA7\u7535\u8DEF\u548C\u7535\u529B\u8FD0\u8F93\u3002
-item.disintegration-conduction-alloy.details=\u62E5\u6709\u8D85\u5BFC\u6027\uFF0C\u8F6C\u53D8\u6E29\u5EA6\u4E3A163K\u3002 \u5728\u5965\u59C6\u5BB9\u7684\u7684\u73AF\u5883\u4E2D\uFF0C\u8FD9\u79CD\u6E29\u5EA6\u5F88\u5BB9\u6613\u88AB\u964D\u6E29\u5F97\u5230\u3002
+item.disintegration-conduction-alloy.details=\u62E5\u6709\u8D85\u5BFC\u6027\uFF0C\u8F6C\u53D8\u6E29\u5EA6\u4E3A65K\u3002 \u5728\u5965\u59C6\u5BB9\u7684\u7684\u73AF\u5883\u4E2D\uFF0C\u8FD9\u79CD\u6E29\u5EA6\u5F88\u5BB9\u6613\u88AB\u964D\u6E29\u5F97\u5230\u3002
 item.disintegration-iridium.name=\u94F1
 item.disintegration-iridium.description=\u7528\u4E8E\u5EFA\u7B51\u7684\u9AD8\u8D28\u91CF\u9632\u5FA1\u3002
 item.disintegration-nitride.name=\u6C2E\u5316\u7269
@@ -303,6 +303,8 @@ block.disintegration-core-pedestal.name=\u57FA\u5EA7\u6838\u5FC3
 block.disintegration-core-pedestal.description=\u57FA\u5730\u7684\u6838\u5FC3\u3002 \u4E00\u65E6\u88AB\u6467\u6BC1\uFF0C\u6B64\u533A\u5757\u5C31\u4F1A\u4E22\u5931\u3002
 block.disintegration-core-pillar.name=\u652F\u67F1\u6838\u5FC3
 block.disintegration-core-pillar.description=\u57FA\u5730\u7684\u6838\u5FC3\u3002 \u88C5\u7532\u4F18\u826F\u3002 \u5BB9\u91CF\u6BD4\u57FA\u5EA7\u6838\u5FC3\u66F4\u5927\u3002
+block.disintegration-core-altar.name=\u796D\u575B\u6838\u5FC3
+block.disintegration-core-altar.description=\u57FA\u5730\u7684\u6838\u5FC3\u3002 \u88C5\u7532\u4F18\u826F\u3002
 block.disintegration-space-station-core.name=\u7A7A\u95F4\u7AD9\u6838\u5FC3
 block.disintegration-space-station-core.description=\u7A7A\u95F4\u7AD9\u7684\u6838\u5FC3\u3002 \u4E00\u65E6\u88AB\u6467\u6BC1\uFF0C\u6B64\u533A\u5757\u5C31\u4F1A\u4E22\u5931\u3002
 block.disintegration-space-station-builder-1.name=\u7A7A\u95F4\u7AD9\u5EFA\u9020\u56681
@@ -396,6 +398,8 @@ unit.disintegration-separate.name=\u5206\u79BB
 unit.disintegration-separate.description=\u4FDD\u62A4\u57FA\u5EA7\u6838\u5FC3\uFF0C\u53EF\u5EFA\u9020\u5EFA\u7B51\u3002 \u4F7F\u7528\u6FC0\u5149\u5F39\u4FEE\u590D\u5EFA\u7B51\u3002
 unit.disintegration-attract.name=\u5438\u5F15
 unit.disintegration-attract.description=\u4FDD\u62A4\u652F\u67F1\u6838\u5FC3\uFF0C\u53EF\u5EFA\u9020\u5EFA\u7B51\u3002 \u4F7F\u7528\u6FC0\u5149\u5F39\u4FEE\u590D\u5EFA\u7B51\u3002
+unit.disintegration-blend.name=\u878D\u5408
+unit.disintegration-blend.description=\u4FDD\u62A4\u796D\u575B\u6838\u5FC3\uFF0C\u53EF\u5EFA\u9020\u5EFA\u7B51\u3002 \u4F7F\u7528\u6FC0\u5149\u5F39\u4FEE\u590D\u5EFA\u7B51\u3002
 unit.disintegration-space-station-drone.name=\u7A7A\u95F4\u7AD9\u65E0\u4EBA\u673A
 unit.disintegration-space-station-drone.description=\u4FDD\u62A4\u7A7A\u95F4\u7AD9\uFF0C\u53EF\u5EFA\u9020\u5EFA\u7B51\u3002 \u4F7F\u7528\u6FC0\u5149\u675F\u4FEE\u590D\u5EFA\u7B51\u3002
 unit.disintegration-repair-drone.name=\u4FEE\u590D\u65E0\u4EBA\u673A
