--- a/main/assets/bundles/bundle_zh_CN.properties
+++ b/main/assets/bundles/bundle_zh_CN.properties
@@ -1,5 +1,3 @@
-mod.disintegration.name=\u8870\u53D8
-mod.disintegration.description=\u4E00\u4E2A\u6B63\u5728\u5F00\u53D1\u7684
 spacestation=\u7A7A\u95F4\u7AD9
 whitespacebetween=false
 cell=\u6DB2\u4F53\u5355\u5143
@@ -43,6 +41,8 @@ liquid.disintegration-liquid-crystal.description=\u7528\u4E8E\u5148\u8FDB\u751F\
 liquid.disintegration-oxygen.name=\u6C27\u6C14
 liquid.disintegration-oxygen.description=\u7528\u4F5C\u6750\u6599\u751F\u4EA7\u7684\u6C27\u5316\u5242\u548C\u71C3\u6599\u3002 \u6709\u4E00\u5B9A\u7206\u70B8\u6027\u3002
 liquid.disintegration-algal-water.name=\u85FB\u6CE5
+liquid.disintegration-carbon-dioxide.name=\u4E8C\u6C27\u5316\u78B3
+liquid.disintegration-molten-lithium.name=\u7194\u878D\u9502
 block.disintegration-magnetism-alloy-smelter.name=\u7535\u78C1\u5408\u91D1\u51B6\u70BC\u7089
 block.disintegration-magnetism-alloy-smelter.description=\u7528\u94F6\uFF0C\u7845\u548C\u6C2E\u6C14\u5408\u6210\u7535\u78C1\u5408\u91D1\u3002
 block.disintegration-conduction-alloy-smelter.name=\u4F20\u5BFC\u5408\u91D1\u51B6\u70BC\u7089
@@ -78,8 +78,26 @@ block.disintegration-blast-compound-mixer.description=\u5229\u7528\u7164\u70AD\u
 block.disintegration-nitride-synthesizer.name=\u6C2E\u5316\u7269\u5408\u6210\u673A
 block.disintegration-nitride-synthesizer.description=\u7528\u6C2E\u548C\u9553\u5408\u6210\u6C2E\u5316\u7269\u3002 \u9700\u8981\u70ED\u91CF\u548C\u6C22\u6C14\u3002
 block.slag-centrifuge.description=\u4EE5\u4F4E\u6548\u7387\u5C06\u77FF\u6E23\u6DB2\u5206\u79BB\u6210\u9553\u6210\u5206\u3002
+block.disintegration-liquid-cell-packer.name=\u88C5\u7F50\u7AD9
+block.disintegration-liquid-cell-packer.description=
+block.disintegration-liquid-cell-unpacker.name=\u503E\u5012\u7AD9
+block.disintegration-liquid-cell-unpacker.description=
+block.disintegration-pyrolysis-furnace.name=\u70ED\u89E3\u7845\u7089
+block.disintegration-pyrolysis-furnace.descriptoion=
+block.disintegration-tantalum-tungsten-alloy-smelter.name=\u94BD\u94A8\u5408\u91D1\u51B6\u70BC\u7089
+block.disintegration-tantalum-tungsten-alloy-smelter.description=
+block.disintegration-surge-kiln.name=\u5408\u91D1\u7A91\u7089
+block.disintegration-surge-kiln.description=
+block.disintegration-resistance-heater.name=\u7535\u963B\u52A0\u70ED\u5668
+block.disintegration-resistance-heater.description=
+block.disintegration-heat-relocator.name=\u70ED\u91CF\u4F20\u8F93\u5668
+block.disintegration-heat-relocator.description=
+block.disintegration-heat-exchanger.name=\u70ED\u4EA4\u6362\u673A
+block.disintegration-heat-exchanger.description=
 block.disintegration-iron-conveyor.name=\u94C1\u4F20\u9001\u5E26
 block.disintegration-iron-conveyor.description=\u5411\u524D\u8FD0\u8F93\u7269\u54C1\u3002
+block.disintegration-pipe.name=\u7269\u54C1\u7BA1\u9053
+block.disintegration-pipe.description=\u5411\u524D\u8FD0\u8F93\u7269\u54C1\u3002
 block.disintegration-iron-bridge-conveyor.name=\u94C1\u4F20\u9001\u5E26\u6865
 block.disintegration-iron-bridge-conveyor.description=\u8DE8\u8D8A\u4EFB\u610F\u5730\u5F62\u6216\u5EFA\u7B51\u8FD0\u8F93\u7269\u54C1\u3002
 block.disintegration-alternate-overflow-gate.name=\u53D8\u6362\u6EA2\u6D41\u95E8
@@ -90,8 +108,12 @@ block.disintegration-inverted-iron-sorter.name=\u53CD\u5411\u94C1\u5206\u7C7B\u5
 block.disintegration-inverted-iron-sorter.description=\u50CF\u5206\u7C7B\u5668\u4E00\u6837\u5904\u7406\u7269\u54C1\uFF0C\u4E0D\u8FC7\u662F\u5411\u4E24\u4FA7\u8F93\u51FA\u6240\u9009\u7684\u7269\u54C1\u3002
 block.disintegration-iron-junction.name=\u94C1\u4EA4\u53C9\u5668
 block.disintegration-iron-junction.description=\u4E24\u6761\u4EA4\u53C9\u4F20\u9001\u5E26\u7684\u6865\u6881\u3002
+block.disintegration-pipe-junction.name=\u7BA1\u9053\u4EA4\u53C9\u5668
+block.disintegration-pipe-junction.description=\u4E24\u6761\u4EA4\u53C9\u7BA1\u9053\u7684\u6865\u6881\u3002
 block.disintegration-iron-router.name=\u94C1\u8DEF\u7531\u5668
 block.disintegration-iron-router.description=\u5C06\u7269\u54C1\u5E73\u5747\u5206\u914D\u5230\u5176\u4ED6\u4E09\u4E2A\u65B9\u5411\u3002
+block.disintegration-pipe-router.name=\u7BA1\u9053\u8DEF\u7531\u5668
+block.disintegration-pipe-router.description=
 block.disintegration-iridium-conveyor.name=\u94F1\u4F20\u9001\u5E26
 block.disintegration-iridium-conveyor.description=\u5411\u524D\u8FD0\u8F93\u7269\u54C1\uFF0C\u6BD4\u94C1\u4F20\u9001\u5E26\u5FEB\u3002
 block.disintegration-portable-drill-unloader.name=\u53EF\u79FB\u52A8\u5F0F\u94BB\u5934\u5378\u8F7D\u5668
@@ -102,10 +124,24 @@ block.disintegration-heat-conduit-router.name=\u70ED\u91CF\u5BFC\u7BA1\u8DEF\u75
 block.disintegration-heat-conduit-router.description=\u5C06\u70ED\u91CF\u5E73\u5747\u5206\u914D\u5230\u53E6\u5916\u4E09\u4E2A\u9762\u3002
 block.disintegration-magnetized-conduit.name=\u78C1\u5316\u5BFC\u7BA1
 block.disintegration-magnetized-conduit.description=\u5411\u524D\u4F20\u8F93\u6DB2\u4F53\u3002 \u6BD4\u666E\u901A\u5BFC\u7BA1\u4F20\u8F93\u6DB2\u4F53\u66F4\u5FEB\uFF0C\u4E14\u80FD\u50A8\u5B58\u66F4\u591A\u6DB2\u4F53\u3002
+block.disintegration-gear-pump.name=\u9F7F\u8F6E\u6CF5
+block.disintegration-gear-pump.description=
+block.disintegration-centrifugal-pump.name=\u79BB\u5FC3\u6CF5
+block.disintegration-centrifugal-pump.description=
+block.disintegration-thermal-pump.name=\u70ED\u80FD\u6CF5
+block.disintegration-thermal-pump.description=
+block.disintegration-liquid-capsule.name=\u6DB2\u4F53\u4ED3
+block.disintegration-liquid-capsule.description=
 block.disintegration-vent-turbine.name=\u6DA1\u8F6E\u53D1\u7535\u673A
 block.disintegration-vent-turbine.description=\u5F53\u653E\u7F6E\u5728\u4E59\u70EF\u6CC9\u4E0A\u65F6\u4EA7\u751F\u7535\u529B\u3002
 block.disintegration-turbine-generator.name=\u84B8\u6C7D\u6DA1\u8F6E
 block.disintegration-turbine-generator.description=\u7528\u84B8\u6C7D\u53D1\u7535\u3002 \u8FD4\u8FD8\u6C34\u3002
+block.disintegration-burning-generator.name=\u71C3\u70E7\u53D1\u7535\u673A
+block.disintegration-burning-generator.description=
+block.disintegration-inertial-confinement-fusion-reactor.name=\u60EF\u6027\u7EA6\u675F\u6838\u805A\u53D8\u53CD\u5E94\u5806
+block.disintegration-inertial-confinement-fusion-reactor.description=
+block.disintegration-lithium-battery.name=\u9502\u7535\u6C60
+block.disintegration-lithium-battery.description=
 block.disintegration-iron-power-node.name=\u94C1\u7535\u529B\u8282\u70B9
 block.disintegration-iron-power-node.description=\u5411\u8FDE\u63A5\u7684\u5176\u4ED6\u8282\u70B9\u4F20\u8F93\u7535\u529B\uFF0C\u4E5F\u80FD\u4ECE\u76F8\u90BB\u7684\u5EFA\u7B51\u63A5\u6536\u7535\u529B\u6216\u5411\u5176\u4F9B\u7535\u3002
 block.disintegration-iron-power-node-large.name=\u5927\u578B\u94C1\u7535\u529B\u8282\u70B9
@@ -124,6 +160,8 @@ block.disintegration-space-solar-panel.name=\u592A\u9633\u80FD\u677F
 block.disintegration-space-solar-panel.description=\u7528\u9633\u5149\u53D1\u7535\u3002
 block.disintegration-rotate-solar-panel.name=\u592A\u9633\u80FD\u677F
 block.disintegration-rotate-solar-panel.description=\u7528\u9633\u5149\u53D1\u7535\u3002
+block.disintegration-twin-solar-panel.name=\u592A\u9633\u80FD\u677F
+block.disintegration-twin-solar-panel.description=\u7528\u9633\u5149\u53D1\u7535\u3002
 block.disintegration-solar-mirror.name=\u592A\u9633\u955C
 block.disintegration-solar-mirror.description=
 block.disintegration-solar-boiler.name=\u592A\u9633\u80FD\u84B8\u6C7D\u9505\u7089
@@ -152,6 +190,14 @@ block.disintegration-cutting-drill.name=\u5207\u524A\u94BB\u5934
 block.disintegration-cutting-drill.description=
 block.disintegration-portable-drill.name=\u53EF\u79FB\u52A8\u5F0F\u94BB\u5934
 block.disintegration-portable-drill.description=\u653E\u7F6E\u5728\u77FF\u7269\u4E0A\u65F6\uFF0C\u4EE5\u7F13\u6162\u7684\u901F\u5EA6\u65E0\u9650\u8F93\u51FA\u7269\u54C1\u3002\u53EF\u4EE5\u79FB\u52A8\u3002\n\u53EA\u80FD\u5F00\u91C7\u57FA\u672C\u8D44\u6E90\u3002
+block.disintegration-plasma-beam-drill.name=\u7B49\u79BB\u5B50\u675F\u94BB\u5934
+block.disintegration-plasma-beam-drill.description=
+block.disintegration-hammering-drill.name=\u51FB\u9524\u94BB\u5934
+block.disintegration-hammering-drill.description=
+block.disintegration-plasma-drill.name=\u7B49\u79BB\u5B50\u94BB\u5934
+block.disintegration-plasma-drill.description=
+block.disintegration-gas-collector.name=\u6C14\u4F53\u6536\u96C6\u5668
+block.disintegration-gas-collector.description=
 block.disintegration-algal-pond.name=\u85FB\u6C60
 block.disintegration-algal-pond.description=\u5C06\u6C34\u4E2D\u4F4E\u6D53\u5EA6\u7684\u85FB\u7C7B\u57F9\u517B\u6210\u85FB\u6C34\u4E0E\u6C27\u6C14\u3002
 block.disintegration-laser-device.name=\u7535\u529B\u6FC0\u5149\u5668
@@ -169,8 +215,11 @@ block.disintegration-green-ice.name=\u7EFF\u51B0
 block.disintegration-green-ice-wall.name=\u7EFF\u51B0\u5899
 block.disintegration-green-floor.name=\u7EFF\u5E55\u5730\u677F
 block.disintegration-ice-water.name=\u51B0\u6C34
-block.disintegration-light-space.name=\u7A7A\u95F4\u7AD9\u592A\u7A7A
 block.disintegration-space-station-floor.name=\u7A7A\u95F4\u7AD9\u5730\u677F
+block.disintegration-space-station-floor-fixed.name=\u56FA\u5B9A\u7A7A\u95F4\u7AD9\u5730\u677F
+block.disintegration-pooled-molten-lithium.name = \u7194\u878D\u9502
+block.disintegration-lithium-stone.name = \u9502\u77F3
+block.disintegration-obsidian-floor.name = \u9ED1\u66DC\u77F3
 block.disintegration-quarry.name=\u91C7\u77F3\u573A
 block.disintegration-quarry.description=\u6316\u6398\u524D\u9762\u4E00\u7247\u533A\u57DF\u7684\u77FF\u7269\u3002
 block.disintegration-sabre.name=\u4F69\u5251
@@ -229,6 +278,24 @@ block.disintegration-portable-turret.name=\u53EF\u79FB\u52A8\u5F0F\u70AE\u5854
 block.disintegration-portable-turret.description=
 block.disintegration-wander.name=\u6F2B\u6B65
 block.disintegration-wander.description=
+block.disintegration-flash.name=\u95EA\u5149
+block.disintegration-flash.description=
+block.disintegration-pentration.name=\u7A7F\u900F
+block.disintegration-pentration.description=
+block.disintegration-discipline.name=\u89C4\u77E9
+block.disintegration-discipline.description=
+block.disintegration-spark.name=\u7535\u706B
+block.disintegration-spark.description=
+block.disintegration-vortex.name=\u6F29\u6DA1
+block.disintegration-vortex.description=
+block.disintegration-retribution.name=\u60E9\u7F5A
+block.disintegration-retribution.description=
+block.disintegration-flame.name=\u706B\u7130
+block.disintegration-flame.description=
+block.disintegration-chain.name=\u9501\u94FE
+block.disintegration-chain.description=
+block.disintegration-domain.name=\u9886\u57DF
+block.disintegration-domain.description=
 block.disintegration-iron-wall.name=\u94C1\u5899
 block.disintegration-iron-wall.description=\u4FDD\u62A4\u5DF1\u65B9\u5EFA\u7B51\uFF0C\u6321\u4E0B\u654C\u65B9\u70AE\u5F39\u3002
 block.disintegration-iron-wall-large.name=\u5927\u578B\u94C1\u5899
@@ -265,6 +332,11 @@ block.disintegration-payload-duct-router.name=\u8F7D\u8377\u5BFC\u7BA1\u8DEF\u75
 block.disintegration-payload-duct-router.description=
 block.disintegration-payload-duct-junction.name=\u8F7D\u8377\u5BFC\u7BA1\u4EA4\u53C9\u5668
 block.disintegration-payload-duct-junction.description=
+block.disintegration-payload-duct-loader.name=\u8F7D\u8377\u5BFC\u7BA1\u88C5\u8F7D\u5668
+block.disintegration-payload-duct-loader.description=
+block.disintegration-payload-duct-unloader.name=\u8F7D\u8377\u5BFC\u7BA1\u5378\u8F7D\u5668
+block.disintegration-payload-propulsor.name=\u8F7D\u8377\u63A8\u8FDB\u5668
+block.disintegration-payload-propulsor.description=
 block.disintegration-payload-teleporter.name=\u8F7D\u8377\u4F20\u9001\u5668
 block.disintegration-payload-teleporter.description=
 block.disintegration-payload-constructor.name=\u8F7D\u8377\u6784\u9020\u5668
@@ -305,6 +377,12 @@ block.disintegration-core-pillar.name=\u652F\u67F1\u6838\u5FC3
 block.disintegration-core-pillar.description=\u57FA\u5730\u7684\u6838\u5FC3\u3002 \u88C5\u7532\u4F18\u826F\u3002 \u5BB9\u91CF\u6BD4\u57FA\u5EA7\u6838\u5FC3\u66F4\u5927\u3002
 block.disintegration-core-altar.name=\u796D\u575B\u6838\u5FC3
 block.disintegration-core-altar.description=\u57FA\u5730\u7684\u6838\u5FC3\u3002 \u88C5\u7532\u4F18\u826F\u3002
+block.disintegration-core-plain.name=\u5E73\u539F\u6838\u5FC3
+block.disintegration-core-plain.description=
+block.disintegration-core-extender.name=\u6838\u5FC3\u5BB9\u91CF\u6269\u5C55
+block.disintegration-core-extender.description=
+block.disintegration-item-capsule.name=\u7269\u54C1\u4ED3
+block.disintegration-item-capsule.description=
 block.disintegration-space-station-core.name=\u7A7A\u95F4\u7AD9\u6838\u5FC3
 block.disintegration-space-station-core.description=\u7A7A\u95F4\u7AD9\u7684\u6838\u5FC3\u3002 \u4E00\u65E6\u88AB\u6467\u6BC1\uFF0C\u6B64\u533A\u5757\u5C31\u4F1A\u4E22\u5931\u3002
 block.disintegration-space-station-builder-1.name=\u7A7A\u95F4\u7AD9\u5EFA\u9020\u56681
@@ -344,6 +422,8 @@ block.disintegration-space-launch-pad.details=\u7528\u4E8E\u8D44\u6E90\u7A7A\u95
 block.disintegration-interplanetary-launch-pad.name=\u884C\u661F\u9645\u53D1\u5C04\u53F0
 block.disintegration-interplanetary-launch-pad.description=\u5C06\u8D27\u7269\u53D1\u5C04\u81F3\u6307\u5B9A\u7A7A\u95F4\u7AD9\u3002
 block.disintegration-interplanetary-launch-pad.details=\u7528\u4E8E\u8D44\u6E90\u7A7A\u95F4\u7AD9\u5BF9\u7A7A\u95F4\u7AD9\u8FD0\u8F93\u7684\u8F68\u9053\u7CFB\u7EDF\u3002
+block.disintegration-general-switch.name=\u901A\u7528\u5F00\u5173
+block.disintegration-general-switch.description=
 unit.disintegration-lancet.name=\u67F3\u5200
 unit.disintegration-lancet.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u6FC0\u5149\u5F39\u3002
 unit.disintegration-talwar.name=\u5F2F\u5200
